# finance-app

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  IMPROVEMENT_PLAN.md  LICENSE  README.kk.md  README.md  README.ru.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.cursor/plans/: finance_app_analysis_6552957d.plan.md
.github/workflows/: build.yml
docs/: IMPORT_SYSTEM.md  ML_MODEL_LOGIC.md
e2e/: critical.spec.ts  forms.spec.ts  navigation.spec.ts  ollama.spec.ts
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: auth.rs  commands.rs  crypto.rs  embedded_llm.rs  error.rs  export.rs  lib.rs  llm.rs  main.rs  messages.rs  security.rs
src-tauri/src/bank_import/: kaspi.rs  mod.rs
src-tauri/src/commands/: accounts.rs  auth.rs  bank_import_cmd.rs  budgets.rs  categories.rs  common.rs  export_import.rs  ml_cmd.rs  mod.rs  recurring.rs  summary_transfers.rs  transactions.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/ml/: anomaly.rs  classifier.rs  features.rs  forecast.rs  insights.rs  mod.rs  model.rs  rules.rs  tfidf.rs  tokenizer.rs  trainer.rs
src/components/: ErrorBoundary.tsx  RequireAuth.tsx  TauriGuard.tsx
src/hooks/: useDebounce.ts
src/lib/: api.ts  format.ts  utils.test.ts  utils.ts
src/locales/: en.json  kk.json  ru.json
src/pages/: Accounts.tsx  Categories.tsx  Chat.tsx  Dashboard.tsx  Docs.tsx  Import.tsx  (+8 more)
(+12 files in other folders)
